Fixed offcentered text in file input

--- a/frontend/src/components/add-attachment/AddAttachment.scss
+++ b/frontend/src/components/add-attachment/AddAttachment.scss
@@ -36,7 +36,7 @@
     cursor: pointer;
     z-index: 1;
     position: absolute;
-    bottom: 20%;
+    bottom: 14%;
     right: -10px;
     color: #999;
     width: 100%;
